@@ -15,30 +15,30 @@ EBUILD emacs-cvs-22.0.95-r2.ebuild 6513 RMD160 216ce5248a0d4ae20f24c49f8bf19ebd5
 MD5 b0373d2c10d31d606ecb80eb4f24150d emacs-cvs-22.0.95-r2.ebuild 6513
 RMD160 216ce5248a0d4ae20f24c49f8bf19ebd521be698 emacs-cvs-22.0.95-r2.ebuild 6513
 SHA256 d175024a482c8d62d8f6322f3c68fff8bf5f9418d319a138bb0c8dbc0fab119e emacs-cvs-22.0.95-r2.ebuild 6513
-EBUILD emacs-cvs-22.0.95-r3.ebuild 6494 RMD160 776761875ec6bb8dd676b4ee070c90b0771b6619 SHA1 96a9d47cce954afd2b6db79493ad472bc8326390 SHA256 9d8bcd34153d6444a0042e0457962a9769ac376d69d2e1a3fa98ef1b5b9f2e5b
-MD5 df6986a6b4bf1bc45c38f1c7ce302570 emacs-cvs-22.0.95-r3.ebuild 6494
-RMD160 776761875ec6bb8dd676b4ee070c90b0771b6619 emacs-cvs-22.0.95-r3.ebuild 6494
-SHA256 9d8bcd34153d6444a0042e0457962a9769ac376d69d2e1a3fa98ef1b5b9f2e5b emacs-cvs-22.0.95-r3.ebuild 6494
+EBUILD emacs-cvs-22.0.95-r3.ebuild 6500 RMD160 2013bf80ff913b8ede302ebf048077eb08951459 SHA1 a1081019676d8f1241cf50b64308520341c45846 SHA256 1006ca9882aabb04c917d841e5000778394356bcb110e41b0a381417aa7dab4c
+MD5 ed44c3039f6ebd03c7caac5bfebfcd5a emacs-cvs-22.0.95-r3.ebuild 6500
+RMD160 2013bf80ff913b8ede302ebf048077eb08951459 emacs-cvs-22.0.95-r3.ebuild 6500
+SHA256 1006ca9882aabb04c917d841e5000778394356bcb110e41b0a381417aa7dab4c emacs-cvs-22.0.95-r3.ebuild 6500
 EBUILD emacs-cvs-22.0.9999-r6.ebuild 6578 RMD160 c0e078a1713b439d5bde6b6dae12c04731d0a0c7 SHA1 0f82bdc9b1e19116c0775675eb5e003abc51dc19 SHA256 ed88165ecc941525c5396af519eb2a5c298f59bf0dfa9d7891b1a71dec5603ae
 MD5 f136ca8aa40b5b3b69709566abd66f32 emacs-cvs-22.0.9999-r6.ebuild 6578
 RMD160 c0e078a1713b439d5bde6b6dae12c04731d0a0c7 emacs-cvs-22.0.9999-r6.ebuild 6578
 SHA256 ed88165ecc941525c5396af519eb2a5c298f59bf0dfa9d7891b1a71dec5603ae emacs-cvs-22.0.9999-r6.ebuild 6578
-EBUILD emacs-cvs-22.0.9999-r7.ebuild 6559 RMD160 cb3b5f34710611efac75cc663af5d3c52f8cfbf7 SHA1 eef66be4ea4a0c04122647f400526ae1868c6b72 SHA256 eac2bf52c6651a4af0e30fcfea288c3b0f90ab40e490e6dde80efe2596b6212b
-MD5 da9d711eb83df2b50042d7374572fb32 emacs-cvs-22.0.9999-r7.ebuild 6559
-RMD160 cb3b5f34710611efac75cc663af5d3c52f8cfbf7 emacs-cvs-22.0.9999-r7.ebuild 6559
-SHA256 eac2bf52c6651a4af0e30fcfea288c3b0f90ab40e490e6dde80efe2596b6212b emacs-cvs-22.0.9999-r7.ebuild 6559
+EBUILD emacs-cvs-22.0.9999-r7.ebuild 6565 RMD160 dd63d43e5244138d023945f923f85b9740b58ff0 SHA1 55b422d30bf0759a2bd45385720801c983f96b82 SHA256 f17285f7a13ddbd4a7179099da1c1305fd8f727cbebfd261a8b69fcd39da1dc9
+MD5 346d853f200e203d990e251aaa50a89e emacs-cvs-22.0.9999-r7.ebuild 6565
+RMD160 dd63d43e5244138d023945f923f85b9740b58ff0 emacs-cvs-22.0.9999-r7.ebuild 6565
+SHA256 f17285f7a13ddbd4a7179099da1c1305fd8f727cbebfd261a8b69fcd39da1dc9 emacs-cvs-22.0.9999-r7.ebuild 6565
 EBUILD emacs-cvs-23.0.0-r2.ebuild 6835 RMD160 4420d82848adbbc1ddc7f434325eab6023e32342 SHA1 4fc9ddb6c0f3ec873e5bbf48fc10bd56f3e0df4c SHA256 c091857c05f45494aad5281412c92bd88cee36c5f76773cdbce84a82d6afb9e4
 MD5 95cfb5d8c6e877f6d2b2305e67e6691c emacs-cvs-23.0.0-r2.ebuild 6835
 RMD160 4420d82848adbbc1ddc7f434325eab6023e32342 emacs-cvs-23.0.0-r2.ebuild 6835
 SHA256 c091857c05f45494aad5281412c92bd88cee36c5f76773cdbce84a82d6afb9e4 emacs-cvs-23.0.0-r2.ebuild 6835
-EBUILD emacs-cvs-23.0.0-r3.ebuild 6816 RMD160 3192b09968faf3c3b0dd1e2d5728b991431b85d8 SHA1 24fe3a2f85d32b65bb2fbb6801a23f0c47c426ca SHA256 4771c2e0479fdc843b1ac632e4fcfce50c291e9a4dc67a68611d0b2bcb50c75d
-MD5 59669067088994860284c422abe1231e emacs-cvs-23.0.0-r3.ebuild 6816
-RMD160 3192b09968faf3c3b0dd1e2d5728b991431b85d8 emacs-cvs-23.0.0-r3.ebuild 6816
-SHA256 4771c2e0479fdc843b1ac632e4fcfce50c291e9a4dc67a68611d0b2bcb50c75d emacs-cvs-23.0.0-r3.ebuild 6816
-MISC ChangeLog 755 RMD160 f739065e9886caed577c7ac40a37ec293dd9d091 SHA1 93a0caf3c8f37a33964b6e29f947a5551ef35150 SHA256 9a0996179d4c0b4805b9550f4f69bdf87e74c697e504706bf745d5c1efb380d5
-MD5 d7948ffc68323a1c9d55f8ddab7e59d4 ChangeLog 755
-RMD160 f739065e9886caed577c7ac40a37ec293dd9d091 ChangeLog 755
-SHA256 9a0996179d4c0b4805b9550f4f69bdf87e74c697e504706bf745d5c1efb380d5 ChangeLog 755
+EBUILD emacs-cvs-23.0.0-r3.ebuild 6822 RMD160 b50bdc3abb94fef199f0f85443911220a5449761 SHA1 9bd3391b98453f070d709a681fca1c8dd7cdf886 SHA256 e9612073eeeeec8ec0000441bda8eafe84b6a46df46a84852e2726c4ca901a39
+MD5 00e9c09f0020d96f0fba79a50159339f emacs-cvs-23.0.0-r3.ebuild 6822
+RMD160 b50bdc3abb94fef199f0f85443911220a5449761 emacs-cvs-23.0.0-r3.ebuild 6822
+SHA256 e9612073eeeeec8ec0000441bda8eafe84b6a46df46a84852e2726c4ca901a39 emacs-cvs-23.0.0-r3.ebuild 6822
+MISC ChangeLog 4667 RMD160 7afd0257dd9449bfe27ac614394dc14f2551d8c4 SHA1 29bd2910cdab3852a075e188b7ef7cc4bed9fa6d SHA256 98390a22b6938a188e995030871d8f55a654f7c74d62cf4abea127d47c0be2d1
+MD5 cc3c782365bcfc4c9212659f30e90dbd ChangeLog 4667
+RMD160 7afd0257dd9449bfe27ac614394dc14f2551d8c4 ChangeLog 4667
+SHA256 98390a22b6938a188e995030871d8f55a654f7c74d62cf4abea127d47c0be2d1 ChangeLog 4667
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
