@@ -3,6 +3,11 @@
 # $Header: $
 
   19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  emacs-cvs-22.0.95-r3.ebuild, emacs-cvs-22.0.9999-r7.ebuild,
+  emacs-cvs-23.0.0-r3.ebuild:
+  correct dependency on the latest eselect module version
+
+  19 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   +emacs-cvs-22.0.95-r3.ebuild, +emacs-cvs-22.0.9999-r7.ebuild,
   +emacs-cvs-23.0.0-r3.ebuild:
   Don't install emacs executable twice; Suffix changed from .emacs- to -emacs-
